--- a/templates/index.html
+++ b/templates/index.html
@@ -6,42 +6,43 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-	<div class="container-fluid" style="padding-top: 15px; padding-bottom: 15px;">
-		<div class="input-group">
-			<input id="searchbox" type="text" class="form-control" placeholder="search for food" style="border-color: #6c757d;">
-			<div class="input-group-append">
-				<button type="button" onclick="submitSearch();" class="btn btn-outline-secondary">Search</button>
-				<button type="button" class="btn btn-outline-secondary dropdown-toggle" data-toggle="collapse" data-target="#advancedFilter">
-					<span class="sr-only">Toggle advanced search</span>
-				</button>
-				<div class="dropdown-menu dropdown-menu-right" id="advancedFilter">
-					<form class="form-horizontal">
-						Exclude foods containing certain allergens:
-							<div class="form-group">
-								<select multiple class="form-control">
-									<option>dairy</option>
-									<option>soy</option>
-									<option>tree nut</option>
-									<option>wheat</option>
-									<option>egg</option>
-								</select>
-							</div>
-						<div class="form-group">
-							
-						</div>
-						<div class="form-group">
-							
-						</div>
-					</form>
-				</div>
-			</div>
-		</div>
-	</div>
+    <div>
+        <div class="container" style="padding-top:15px; padding-bottom:15px;">
+            <div class="input-group">
+                <input id="searchbox" type="text" class="form-control" placeholder="search for food" style="border-color: #6c757d;">
+                <div class="input-group-append">
+                    <button type="button" onclick="submitSearch();" class="btn btn-outline-secondary">Search</button>
+                    <button type="button" class="btn btn-outline-secondary dropdown-toggle" data-toggle="collapse" data-target="#advancedFilter">
+                        <span class="sr-only">Toggle advanced search</span>
+                    </button>
+                    <div class="dropdown-menu dropdown-menu-right" id="advancedFilter">
+                        <form class="form-horizontal">
+                            Exclude foods containing certain allergens:
+                                <div class="form-group">
+                                    <select multiple class="form-control">
+                                        <option>dairy</option>
+                                        <option>soy</option>
+                                        <option>tree nut</option>
+                                        <option>wheat</option>
+                                        <option>egg</option>
+                                    </select>
+                                </div>
+                            <div class="form-group">
+                                
+                            </div>
+                            <div class="form-group">
+                                
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
 	
-	<div id="results">
-		
-	</div>
-    
+        <div class="container" style="padding-bottom:15px;" id="results">
+            
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
@@ -55,7 +56,7 @@
                 data: {'textvalue' : $('#searchbox').val()},
                 success: function(data) {
                     $("#results").empty();
-                    var results_container = $('<div class="container" id="results" style="border-color:#6c757d; border: 1px solid; border-radius: .25rem;"></div>');
+                    var results_container = $('<div class="container" id="results" style="padding:10px; border-color:#6c757d; border: 1px solid; border-radius: .25rem;"></div>');
                     $(results_container).append('<b>' + data.length + '</b> result' + (data.length == 1 ? '' : 's') + '<br/>');
                     for(var i=0; i<data.length; i++){
                         var item = data[i];
