--- a/templates/index.html
+++ b/templates/index.html
@@ -45,16 +45,50 @@
                 </div>
             </div>
         </div>
-	
-        <div class="container" style="padding-bottom:15px;" id="results">
-            
+        
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6" style="padding-bottom:15px;" id="results">
+                    
+                </div>
+                <div class="col-lg-6" style="padding-bottom:15px;">
+                    <div id="map" style="height:400px; border-color:#6c757d; border:1px solid; border-radius:.25rem;"></div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     
+
     <script type="text/javascript">
+        var map, infoWindow;
+                var apiGeolocationSuccess = function(position) {
+            alert("API geolocation success!\n\nlat = " + position.coords.latitude + "\nlng = " + position.coords.longitude);
+        };
+        function initMap() {
+            var myStyles =[
+                {
+                    featureType: "poi",
+                    elementType: "labels",
+                    stylers: [
+                        { visibility: "off" }
+                    ]
+                }
+            ];
+            map = new google.maps.Map(document.getElementById('map'), {
+              center: {lat: 33.7869221, lng: -84.4014972},
+              zoom: 16,
+              mapTypeId: google.maps.MapTypeId.ROADMAP,
+              styles : myStyles,
+            });
+
+            $.post( "https://www.googleapis.com/geolocation/v1/geolocate?key=AIzaSyAoCL0zoZJSYwrDyqphLS9U1fMinZC5w6Q", function(success) {
+                map.setCenter(new google.maps.LatLng(success.location.lat, success.location.lng));
+            })
+        }
+        
         $(document).ready(function(){
             $(".dropdown").on("hide.bs.dropdown", function(){
                 $("#textsearch").removeAttr("disabled");
@@ -76,18 +110,36 @@
                 dataType : "json",
                 data: {'textvalue' : $('#searchbox').val()},
                 success: function(data) {
+                    var items = data['items'];
+                    var locations = data['locations'];
+                    
                     $("#results").empty();
                     var results_container = $('<div class="container" id="results" style="padding:10px; border-color:#6c757d; border: 1px solid; border-radius: .25rem;"></div>');
-                    $(results_container).append('<b>' + data.length + '</b> result' + (data.length == 1 ? '' : 's') + '<br/>');
-                    for(var i=0; i<data.length; i++){
-                        var item = data[i];
-                        var item_element = '<div class="d-lg-flex"><a href="' + '/fooditem/' + item._id['$oid'] + '">' + item.name + '</a></div>';
+                    $(results_container).append('<b>' + items.length + '</b> result' + (items.length == 1 ? '' : 's') + '<br/>');
+                    for(var i=0; i<items.length; i++){
+                        var item = items[i];
+                        var item_element = '<div class="d-lg-flex"><a href="' + '/fooditem/' + item._id['$oid'] + '">' + item.name + '</a> ID: ' + item._id['$oid'] + '</div>';
                         $(results_container).append(item_element);
                     }
                     $("#results").append(results_container);
+                    
+                    for(var i=0; i<locations.length; i++){
+                        console.log(locations[i]);
+                        var location = {lat : locations[i]['location']['lat'], lng : locations[i]['location']['lng']};
+                        console.log(location);
+                        
+                        var marker = new google.maps.Marker({
+                            position: location,
+                            label: locations[i]['name'],
+                            map: map
+                        });
+                    }
                 }
             });
         }
     </script>
+    
+    
+    <script src = "https://maps.googleapis.com/maps/api/js?key=AIzaSyD4GDFrM7gvWGZGMVrk8TTbdOo45KI7Rzc&libraries=visualization&callback=initMap"></script>
 </body>
 </html>
