--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div>
@@ -11,25 +12,25 @@
             <div class="input-group">
                 <input id="searchbox" type="text" class="form-control" placeholder="search for food" style="border-color: #6c757d;">
                 <div class="input-group-append btn-group dropdown">
-                    <button type="button" id="textsearch" onclick="submitSearch();" class="btn btn-outline-secondary">Search</button>
+                    <button type="button" id="textsearch" onclick="submitSearch();" class="btn btn-outline-secondary">search</button>
                     <button type="button" class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown"></button>
                     <form class="dropdown-menu dropdown-menu-right p-4" style="min-width: 330px; border-color: #6c757d;">
                         <div class="form-group">
-                            <label>Price range:</label>
+                            <label>price range:</label>
                             <div class="input-group" align="right">
                                 <input type="number" style="border-color: #6c757d;" class="form-control"> <span class="col-form-label">&nbsp;to&nbsp;</span> <input style="border-color: #6c757d;" type="number" class="form-control">
                             </div>
                         </div>
                         <div class="dropdown-divider"></div>
                         <div class="form-group">
-                            <label>Calorie range:</label>
+                            <label>calorie range:</label>
                             <div class="input-group" align="right">
                                 <input type="number" class="form-control" style="border-color: #6c757d;"> <span class="col-form-label">&nbsp;to&nbsp;</span> <input type="number" class="form-control" style="border-color: #6c757d;">
                             </div>
                         </div>
                         <div class="dropdown-divider"></div>
                         <div class="form-group">
-                            <label>Exclude foods containing certain allergens:</label>
+                            <label>exclude foods containing certain allergens:</label>
                             <div class="input-group" align="right">
                                 <select multiple class="form-control" style="border-color: #6c757d;"> 
                                     <option>dairy</option> 
@@ -40,20 +41,18 @@
                                 </select>
                             </div>
                         </div>
-                        <button type="submit" id="advancedsearch" class="btn btn-outline-secondary">Search</button>
+                        <button type="submit" id="advancedsearch" class="btn btn-outline-secondary">search</button>
                     </form>
                 </div>
             </div>
         </div>
         
         <div class="container">
-            <div class="row">
-                <div class="col-lg-6" style="padding-bottom:15px;" id="results">
+                <!-- <div style="padding-bottom:15px;" id="mapcontainer">
+                    <div id="map" style="height:200px; border-color:#6c757d; border:1px solid; border-radius:.25rem;"></div>
+                </div> -->
+            <div style="padding-bottom:15px;" id="results">
                     
-                </div>
-                <div class="col-lg-6" style="padding-bottom:15px;">
-                    <div id="map" style="height:400px; border-color:#6c757d; border:1px solid; border-radius:.25rem;"></div>
-                </div>
             </div>
         </div>
     </div>
@@ -63,10 +62,10 @@
     
 
     <script type="text/javascript">
+        var markers = [];
+		var compareItems = new Set([]);
         var map, infoWindow;
-                var apiGeolocationSuccess = function(position) {
-            alert("API geolocation success!\n\nlat = " + position.coords.latitude + "\nlng = " + position.coords.longitude);
-        };
+               
         function initMap() {
             var myStyles =[
                 {
@@ -78,8 +77,8 @@
                 }
             ];
             map = new google.maps.Map(document.getElementById('map'), {
-              center: {lat: 33.7869221, lng: -84.4014972},
-              zoom: 16,
+              center: {lat: 33.773836, lng: -84.398553},
+              zoom: 18,
               mapTypeId: google.maps.MapTypeId.ROADMAP,
               styles : myStyles,
             });
@@ -103,40 +102,131 @@
             });
         });
     
+        function loadResults(data){
+            var items = data['items'];
+            var locations = data['locations'];
+            
+            $("#results").empty();
+            var results_container = $('<div class="container" id="results" style="padding:10px; border-color:#6c757d; border: 1px solid; border-radius: .25rem;"></div>');
+            var results_header = $('<div style="height: 40px; padding:3px;"><div style="display: inline-block;"><b>' + (items ? items.length : 0) + '</b> result' + (items && items.length == 1 ? '' : 's') + '<br/></div></div>');
+            
+            if (items) {
+                $(results_header).append('<button type="button" class="btn btn-sm btn-outline-danger float-right" onclick="clearResults()">clear results</button>');
+            }
+            $(results_container).append(results_header);
+                
+            if(markers){
+                for (var i=0; i<markers.length; i++){
+                    markers[i].setMap(null);
+                    console.log(markers[i]);
+                }
+            }
+            for(var i=0; items && i<items.length; i++){
+                var item = items[i];
+                var price = typeof(item.price) == 'number' ? '$' + item.price.toFixed(2) : 'unknown';
+                var item_element = $('<div id="' + item._id['$oid'] + '" style="border-bottom:1px solid #6c757d; padding:3px;">' +
+                        '<div class="row">' +
+							'<div class="col col-10">' +
+								'<a href="' + '/fooditem/' + item._id['$oid'] + '">' +
+									'<div class="row">' + 
+										'<div class="col col-5">' + item.name + '</div>' +
+										'<div class="col col-3">' + price + '</div>' + 
+										'<div class="col col-4">' + item.restaurant.name + '</div>' +
+									'</div>'+
+								'</a>' +
+							'</div>' +
+                            '<div class="col col-sm-2">' +
+                                '<div class="btn-group float-right" id="compgroup' + item._id['$oid'] + '" role="group">' +
+                                    '<button type="button" id="compare' + item._id['$oid'] + '" class="btn btn-sm btn-secondary invisible" onclick="compare(this.id)">compare</button>' +
+                                    '<button type="button" id="compadd' + item._id['$oid'] + '" class="btn btn-sm btn-outline-success" onclick=toggleCompare(this.id)><i class="fa fa-plus"></i></button>' +
+                                '</div>' +
+                            '</div>' +
+						'</div></div>');
+                $(item_element).hover(rowHoverIn, rowHoverOut);
+                $(results_container).append(item_element);
+            }
+            $("#results").append(results_container);
+            
+            for(var i=0; locations && i<locations.length; i++){
+                var location = {lat : locations[i]['location']['lat'], lng : locations[i]['location']['lng']};
+                
+                var marker = new google.maps.Marker({
+                    position: location,
+                    label: locations[i]['name'],
+                    map: map
+                });
+                marker.addListener('click', function() {
+                    map.setCenter(marker.getPosition());
+                  });
+                markers.push(marker);
+                
+                if (i==0){
+                    map.setCenter(marker.getPosition());
+                    console.log('hi');
+                }
+            }
+        }
+        
+        function rowHoverIn() {
+            $(this).css("background-color", "#E8E8E8");
+            $('#compare' + $(this).attr('id')).removeClass('invisible');
+        }
+        function rowHoverOut() {
+            $(this).css("background-color", "#fff");
+            $('#compare' + $(this).attr('id')).addClass('invisible');
+        }
+        
+        function clearResults() {
+            loadResults([]);
+            $('#searchbox').val('')
+        }
+        
         function submitSearch() {
+            $("#results").empty();
+            $("#results").append('<img src="static/Spinner-1s-200px.gif" style="display:block; margin:0 auto;">');
             $.ajax({
                 type: "POST",
                 url: "/search",
                 dataType : "json",
                 data: {'textvalue' : $('#searchbox').val()},
                 success: function(data) {
-                    var items = data['items'];
-                    var locations = data['locations'];
-                    
-                    $("#results").empty();
-                    var results_container = $('<div class="container" id="results" style="padding:10px; border-color:#6c757d; border: 1px solid; border-radius: .25rem;"></div>');
-                    $(results_container).append('<b>' + items.length + '</b> result' + (items.length == 1 ? '' : 's') + '<br/>');
-                    for(var i=0; i<items.length; i++){
-                        var item = items[i];
-                        var item_element = '<div class="d-lg-flex"><a href="' + '/fooditem/' + item._id['$oid'] + '">' + item.name + '</a> ID: ' + item._id['$oid'] + '</div>';
-                        $(results_container).append(item_element);
-                    }
-                    $("#results").append(results_container);
-                    
-                    for(var i=0; i<locations.length; i++){
-                        console.log(locations[i]);
-                        var location = {lat : locations[i]['location']['lat'], lng : locations[i]['location']['lng']};
-                        console.log(location);
-                        
-                        var marker = new google.maps.Marker({
-                            position: location,
-                            label: locations[i]['name'],
-                            map: map
-                        });
-                    }
+                    setTimeout(function() {
+                        loadResults(data);
+                    }, 500);
                 }
             });
         }
+		
+		
+		function toggleCompare(id) {
+			var element = $('#' + id);
+			if (element.hasClass('btn-outline-success')) { //if add
+				compareItems.add(id.replace(/compadd/, ''));
+				element.addClass('btn-danger').removeClass('btn-outline-success');
+                element.empty().append('<i class="fa fa-minus"></i>');
+			} else { //if remove
+				if (compareItems.has(id)) {
+					compareItems.delete(id);
+				}
+				element.addClass('btn-outline-success').removeClass('btn-danger');
+                element.empty().append('<i class="fa fa-plus"></i>');
+			}
+		}
+		
+		function compare(id){
+            var add_id = id.replace(/compare/, '');
+            var element = $('#compadd' + add_id);
+            if (element.hasClass('btn-outline-success')) { //if add
+				compareItems.add(add_id);
+				element.addClass('btn-danger').removeClass('btn-outline-success');
+                element.empty().append('<i class="fa fa-minus"></i>');
+			}
+            
+			var url = '/compare?ids=' + encodeURIComponent(Array.from(compareItems));
+			window.open(url,'_self');
+		}
+        
+        $(document).ready(submitSearch());
     </script>
     
     
